<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="72dp"
            android:text="@string/mein_profil"
            android:textColor="@color/purple_500"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" /> &lt;!&ndash; Avatar image in preview only &ndash;&gt;-->

        <EditText
            android:id="@+id/profile_image"
            android:layout_width="279dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:autofillHints="ort"
            android:inputType="text"
            android:text="@string/ort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <EditText
            android:id="@+id/profile_place"
            android:layout_width="279dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:autofillHints="ort"
            android:inputType="text"
            android:text="@string/ort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <EditText
            android:id="@+id/profile_job"
            android:layout_width="279dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:autofillHints="@string/ort"
            android:inputType="text"
            android:text="@string/taetigkeit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_place" />

        <EditText
            android:id="@+id/profile_age"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:autofillHints="@string/taetigkeit"
            android:inputType="number"
            android:text="@string/alter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_job" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="153dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/profile_age"
            app:layout_constraintEnd_toEndOf="@+id/profile_about">

            <RadioButton
                android:id="@+id/profile_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m" />

            <RadioButton
                android:id="@+id/profile_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f" />

            <RadioButton
                android:id="@+id/profile_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d" />
        </RadioGroup>

        <EditText
            android:id="@+id/profile_about"
            android:layout_width="284dp"
            android:layout_height="235dp"
            android:layout_marginTop="24dp"
            android:autofillHints="@string/ber_mich"
            android:inputType="textMultiLine"
            android:text="@string/ber_mich"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_age" />

        <TextView
            android:id="@+id/profile_usertype"
            android:layout_width="284dp"
            android:layout_height="235dp"
            android:layout_marginTop="24dp"
            android:autofillHints="Nutzerart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_about" />

<!--        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/active_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:height="50dp"
            android:text="@string/profil_aktiv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about" /> TODO -->

        <Button
            android:id="@+id/settings_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/speichern"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_about" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

