<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="72dp"
                    android:text="@string/mein_profil"
                    android:textColor="@color/purple_500"
                    android:textSize="30sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/profile_image_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:autofillHints="ort"
                android:inputType="text"
                android:text="@string/ort"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_name_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_place_layout"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:hint="Ort"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image_view">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_job_layout"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:hint="@string/taetigkeit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_place_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_age_layout"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="32dp"
                android:hint="@string/age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_job_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/age"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/profile_gender"
                android:layout_width="153dp"
                android:layout_height="50dp"
                android:autofillHints="gender"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/profile_age_layout"
                app:layout_constraintEnd_toEndOf="@+id/profile_about_layout">

                <RadioButton
                    android:id="@+id/profile_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m" />

                <RadioButton
                    android:id="@+id/profile_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f" />

                <RadioButton
                    android:id="@+id/profile_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_about_layout"
                android:layout_width="284dp"
                android:layout_height="150dp"
                android:layout_marginTop="24dp"
                android:hint="@string/about"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_age_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:autofillHints="Über mich"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/active_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:height="50dp"
                android:text="@string/profil_aktiv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_about_layout" />

            <Button
                android:id="@+id/settings_button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/speichern"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/active_toggle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/orange_dark"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>
