<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstSiteActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/find_your_wg_logo_firstSite"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/findyourwglogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/werbeSlogan_firstSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/werbeslogan"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/find_your_wg_logo_firstSite"
        app:layout_constraintStart_toStartOf="@+id/find_your_wg_logo_firstSite"
        app:layout_constraintTop_toBottomOf="@+id/find_your_wg_logo_firstSite" />

    <TextView
        android:id="@+id/app_name_first_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/werbeSlogan_firstSite"
        app:layout_constraintStart_toStartOf="@+id/werbeSlogan_firstSite"
        app:layout_constraintTop_toBottomOf="@+id/werbeSlogan_firstSite" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sing_in_button_first_site"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/jetzt_anmelden"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/register_button_first_site"
        app:layout_constraintTop_toBottomOf="@+id/app_name_first_site" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button_first_site"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/jetzt_registrieren"
        app:layout_constraintEnd_toStartOf="@+id/sing_in_button_first_site"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_first_site"
        android:background="@drawable/rounded_button">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>