<?xml version="1.0" encoding="utf-8"?>

<!--
based on yukakaido library, buttons copied
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
    android:background="@color/orange_bright">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linear_layout_cards"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.yuyakaido.android.cardstackview.CardStackView
            android:id="@+id/card_stack_view"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:padding="4dp"
            android:clipToPadding="false">
        </com.yuyakaido.android.cardstackview.CardStackView>

        <RelativeLayout
            android:id="@+id/button_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="80dp"
            android:clipChildren="false">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/skip_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/main_filter_button"
                android:src="@drawable/skip_red_24dp_yuya"
                app:backgroundTint="@android:color/white"
                app:fabSize="auto"
                app:rippleColor="#22ED7563"
                android:contentDescription="@string/dislike" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/main_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginEnd="32dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_filter_alt_24"
                app:backgroundTint="@android:color/white"
                app:fabSize="mini"
                app:rippleColor="#225BC9FA"
                android:contentDescription="@string/filter" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/main_filter_button"
                android:src="@drawable/like_green_24dp_yuya"
                app:backgroundTint="@android:color/white"
                app:fabSize="auto"
                app:rippleColor="#226FE2B3"
                android:contentDescription="@string/like_button" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_empty"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:clipChildren="false"
            android:visibility="invisible"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:text="@string/emptyStackWarning"
            android:gravity="center"
            android:textAlignment="center"
            style = "@style/generalTextfield"
            />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/orange_dark"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf = "parent"
        android:gravity="center|bottom"
        app:labelVisibilityMode="labeled"
        />

</androidx.constraintlayout.widget.ConstraintLayout>